# abrikotyan

./: READ.md  README.md  abrikotyan_protocol.txt
Android/Abrikotyan/app/: build.gradle
Android/Abrikotyan/app/src/androidTest/java/com/tymphany/abrikotyan/: ExampleInstrumentedTest.java
Android/Abrikotyan/app/src/main/: AndroidManifest.xml
Android/Abrikotyan/app/src/main/java/com/tymphany/abrikotyan/: MainActivity.java  MotorState.java  SocketClient.java
Android/Abrikotyan/app/src/main/res/drawable/: ic_launcher_foreground.xml
Android/Abrikotyan/app/src/main/res/layout/: activity_main.xml
Android/Abrikotyan/app/src/main/res/values/: strings.xml
Android/Abrikotyan/app/src/test/java/com/tymphany/abrikotyan/: ExampleUnitTest.java
Android/Abrikotyan/gradle/wrapper/: gradle-wrapper.properties
harp_client/harp/: harp.sln
harp_client/harp/harp/: Program.cs  harp.csproj
harp_client/harp/harp/Properties/: AssemblyInfo.cs
rasp_tcp_srv/: CMakeLists.txt  Makefile  rasp_srv.c  run_cmake.txt
rasp_tcp_srv/src/: CMakeLists.txt  main.c  motor_ctrl.c  motor_ctrl.h  proj.config  rasp_srv.c  rasp_srv.h
